--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -23,7 +23,7 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<!--<dependency> 
-			<groupId>org.springframework.boot</groupId> 
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId> 
 		</dependency> -->
 		<dependency>
@@ -47,17 +47,27 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- <dependency> 
-			<groupId>org.springframework.security</groupId> 
-			<artifactId>spring-security-test</artifactId> 
-			<scope>test</scope> 
-		</dependency> -->
+			<groupId>org.springframework.security</groupId>
+			 <artifactId>spring-security-test</artifactId> 
+			<scope>test</scope>
+	    </dependency> -->
+	    <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.1.0</version>
 			</plugin>
 		</plugins>
 	</build>
