--- a/backend/src/main/resources/application-test.properties
+++ b/backend/src/main/resources/application-test.properties
@@ -1,8 +1,11 @@
 # Dados de conexão com o banco H2
+#org.h2.Driver
 
+#spring.datasource.url=jdbc:h2:file:/home/leonardo/testdb
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
 
 # Configuração do cliente web do banco H2
 
@@ -13,3 +16,5 @@ spring.h2.console.path=/h2-console
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create
